ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  labels:
    app: usermgmt-restapp
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: 45678.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port: 
              number: 80
